<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_open_with"
        android:title="@string/open_with">
    </item>
    <item
        android:id="@+id/menu_property"
        android:title="@string/menu_file_property">
    </item>
    
    <item
        android:id="@+id/menu_copy"
        android:title="@string/menu_file_copy">
    </item>
    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_file_remove">
    </item>
    <item android:id="@+id/menu_select_mutiple" android:title="@string/select_mutiple">
    </item><item android:id="@+id/menu_rename" android:title="@string/menu_file_rename">
    </item><item
        android:id="@+id/menu_cut"
        android:title="@string/menu_file_cut">
    </item>
    <item
        android:id="@+id/menu_new_folder"
        android:title="@string/menu_file_new_folder">
    </item>
    <item
        android:id="@+id/menu_new_file"
        android:title="@string/menu_file_new">
    </item>
    

</menu>