<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageview_title"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/title"
            android:src="@android:drawable/ic_menu_more" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imageview_title"
            android:layout_alignTop="@id/imageview_title"
            android:layout_toRightOf="@id/imageview_title"
            android:gravity="center_vertical"
            android:paddingLeft="2dp"
            android:text="@string/open_as"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black" />

    <Button
        android:id="@+id/button_text"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/button_background_onyxpathindicator"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dp"
        android:text="@string/text"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#555555" />

    <Button
        android:id="@+id/button_audio"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/button_background_onyxpathindicator"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dp"
        android:text="@string/audio"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#555555" />

    <Button
        android:id="@+id/button_video"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/button_background_onyxpathindicator"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dp"
        android:text="@string/video"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#555555" />

    <Button
        android:id="@+id/button_image"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/button_background_onyxpathindicator"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dp"
        android:text="@string/image"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_cancel"
        style="@style/button_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:text="@string/cancel"
        android:textSize="25sp" />

</LinearLayout>