<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="290dp"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageview_path_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/title"
            android:src="@android:drawable/ic_menu_more" />

        <TextView
            android:id="@+id/textview_paht_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imageview_path_title"
            android:layout_alignTop="@id/imageview_path_title"
            android:layout_toRightOf="@id/imageview_path_title"
            android:gravity="center_vertical"
            android:text="@string/path"
            android:textSize="20sp"
            android:textColor="@android:color/primary_text_light" />
    </RelativeLayout>

    <com.onyx.android.sdk.ui.OnyxGridView
        android:id="@+id/gridview_path_indicator"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:background="#FFFFFF" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        style="@style/button_black"
        android:textSize="25sp"
        android:text="@string/cancel" />

</LinearLayout>