<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:background="@drawable/dialog_background"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/title"
                android:src="@android:drawable/ic_menu_more" />

            <TextView
                android:id="@+id/textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/imageview_title"
                android:layout_alignTop="@id/imageview_title"
                android:layout_toRightOf="@id/imageview_title"
                android:gravity="center_vertical"
                android:text="@string/dialog_sort_by_title"
                android:textColor="@android:color/primary_text_light"
                android:textSize="25sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <ImageView
                android:id="@+id/imageview_previous"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:contentDescription="@string/title"
                android:src="@drawable/sort_by_previous"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/radioGroupOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/imageview_previous"
                android:checkedButton="@+id/radioAsc"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioAsc"
                    style="@style/radiobutton_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_asc"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/radioDesc"
                    style="@style/radiobutton_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="@string/order_desc"
                    android:textColor="#000000" />
            </RadioGroup>

            <ImageView
                android:id="@+id/imageview_next"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/radioGroupOrder"
                android:contentDescription="@string/title"
                android:src="@drawable/sort_by_next"
                android:visibility="gone" />
        </RelativeLayout>

        <com.onyx.android.sdk.ui.OnyxGridView
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1.0"
            android:background="#FFFFFF" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/button_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:minHeight="50dp"
            android:text="@string/cancel"
            android:textSize="25sp" />

</LinearLayout>