<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/layout_paged_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="25dp" >

        <Button
            android:id="@+id/button_previous_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_previous_page_background"
            android:focusable="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginRight="80dp" />

        <Button
            android:id="@+id/button_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_progress_background"
            android:focusable="true"
            android:gravity="center"
            android:minWidth="60dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/paged_init_text"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_next_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_next_page_background"
            android:focusable="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginLeft="80dp" />
    </LinearLayout>

    <com.onyx.android.sdk.ui.OnyxGridView
        android:id="@+id/gridview_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_paged_view"
        android:background="#FFFFFF"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/gridview_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_paste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1.0"
            android:background="@drawable/button_background"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/paste"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1.0"
            android:background="@drawable/button_background"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/copy"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_cut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1.0"
            android:background="@drawable/button_background"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/cut"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1.0"
            android:background="@drawable/button_background"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/delete"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1.0"
            android:background="@drawable/button_background"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>